--- a/css/Carosel.css
+++ b/css/Carosel.css
@@ -1,7 +1,7 @@
 /* Contêiner do carrossel */
 .w3-content {
     position: relative;
-    max-width: 800px;
+    max-width: 100%;
     margin: auto;
 }
 
@@ -14,7 +14,7 @@
 /* Estilo para os botões de navegação e indicadores do slideshow */
 .w3-left, .w3-right {
     cursor: pointer;
-    color: white;
+
     font-size: 24px;
     font-weight: bold;
     position: absolute;
@@ -22,10 +22,16 @@
     width: auto;
     padding: 16px;
     margin-top: -22px;
-    color: black;
+    color: #B22222;
     text-align: center;
     border-radius: 0 3px 3px 0;
     user-select: none;
+    transition: 0.3s;
+    opacity: 75%;
+}
+
+.w3-left :hover {
+    opacity: 100%;
 }
 
 .w3-left {
@@ -47,7 +53,11 @@
     display: inline-block;
     margin: 0 2px;
     border-radius: 50%;
+    border: solid 10px;
+    
+    
 }
+
 
 /* Imagem */
 .mySlides img {
@@ -57,9 +67,10 @@
 }
 
 /* DESKTOP IMG */
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1000px) {
+
     .mySlides img {
         width: 1100px;
-        height: 460px;
+        height: 800px;
     }
 }
