arrumado botão, adcionado hover nos botoes

--- a/tela-cadastro/styles.css
+++ b/tela-cadastro/styles.css
@@ -142,6 +142,11 @@ header {
     /*icon menu hamburger*/
 }
 
+.cadastro input[type="submit"]:hover {
+    background-color: var(--cornavborda);
+}
+
+
 /*MOBILE*/
 @media screen and (max-width: 600px) {
 
